Wrap filename format result in add unique window

--- a/gui/src/batch/add-unique-window.ui
+++ b/gui/src/batch/add-unique-window.ui
@@ -77,6 +77,9 @@
      <property name="text">
       <string/>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item row="7" column="0" colspan="2">
@@ -86,8 +89,8 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>20</width>
-       <height>400</height>
+       <width>0</width>
+       <height>0</height>
       </size>
      </property>
     </spacer>
