--- a/gui/src/favorite-window.ui
+++ b/gui/src/favorite-window.ui
@@ -121,6 +121,16 @@
          </item>
         </layout>
        </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="postFilteringLabel">
+         <property name="text">
+          <string>Post-filtering</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLineEdit" name="postFilteringLineEdit"/>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabMonitoring">
