--- a/gui/src/settings/options-window.ui
+++ b/gui/src/settings/options-window.ui
@@ -831,6 +831,37 @@
           </item>
          </widget>
         </item>
+        <item row="14" column="0">
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Temporary directory</string>
+          </property>
+         </widget>
+        </item>
+        <item row="15" column="0" colspan="2">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>&lt;i&gt;Leave empty to use the default temporary directory.&lt;/i&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="14" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QLineEdit" name="lineTempPathOverride"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="buttonTempPathOverride">
+            <property name="text">
+             <string>Browse</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="pageSaveFilenames">
@@ -995,8 +1026,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>65</width>
-             <height>16</height>
+             <width>100</width>
+             <height>30</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="scrollAreaWidgetLayout">
