Fix left menu headers in the docs

--- a/_includes/navbar_link.html
+++ b/_includes/navbar_link.html
@@ -3,7 +3,7 @@
 
 <li class="{% if page.url == p.url %}active{% endif %}
 {% if item.children %}has-children{% endif %}">
-	{% if p %}
+	{% if item.link and p %}
 		<a href="{{ p.url | relative_url }}">
 			{% if p.menu_name %}
 				{{ p.menu_name }}
